# SpeechCloud.py

./: .gitignore  README.md  pyproject.toml
examples/: live_asr_tts.py  requirements.txt  servirka.py  servirka_ws.py
speechcloud/: __init__.py  audio.py  client.py  dialog.py  sc_client.py  sip_aiortc.py
src/speechcloud/: __init__.py  client.py  sip_interface.py
tests/: test_live_asr_tts.py  test_sip_filter.py
