[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speechcloud"
version = "0.1.0"
description = "Python client library for SpeechCloud"
authors = [{name = "Jan Švec", email = "honza@example.com"}]
dependencies = [
    "aiohttp",
    "pyee"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
sip = ["aiortc @ git+ssh://git@github.com/honzas83/aiortc.git"]
